# ViralMint

./: .dockerignore  .editorconfig  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LEGAL.md  README.md  SECURITY.md  ViralMint 项目分析报告.md  app.py  app.py.bak  desktop_app.py  i18n.py  launcher.py  pyproject.toml  requirements.txt  requirements_local.txt  run.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  sync.yml  sync_to_hf.yml
backend/: config.py  database.py  main.py
backend/agents/: analyzer.py  downloader.py  generator.py  generator_prompts.py  generator_video.py  job_helper.py  news_scout.py  planner.py  scout.py  uploader.py
backend/api/: captions.py  channels.py  chat.py  chat_sessions.py  config.py  downloaded.py  generate.py  jobs.py  media.py  messaging.py  news.py  scout.py  settings.py  templates.py  videos.py
backend/core/: ai_provider.py  ai_retry.py  api_keys.py  crypto.py  device_id.py  exceptions.py  http_utils.py  logging_config.py  plugins.py  setup_wizard.py  task_runner.py  user_intelligence.py  ws_manager.py
backend/messaging/: _shared.py  base.py  discord_channel.py  manager.py  slack_channel.py  telegram_channel.py  whatsapp_channel.py
backend/models/: __init__.py  base.py  caption_style.py  job.py  (+13 more)
desktop/: .gitignore  README.md
docs/: DEVELOPMENT_LOG.md  OVERLAY.md  SDLC_RULES.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
tests/: conftest.py  test_caption_service.py  test_crypto.py  test_exceptions.py  test_http_utils.py  test_integration_suite.py  test_scout_scoring.py  test_task_runner.py
(+99 files in other folders)
